завершены и протестированы сервисные методы для User, приступить к сервисным методам для Film